# termdo-tasks-api

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
scripts/: clean.py
source/: main.py
source/app/configs/: app_config.py  db_config.py
source/app/schemas/: base_response.py
source/common/models/: task_model.py
source/common/queries/: task_queries.py
source/core/tasks/: tasks_builder.py  tasks_manager.py  tasks_provider.py
source/core/tasks/schemas/: tasks_request.py  tasks_response.py
source/modules/db/: module.py
source/modules/db/core/: db_handler.py
source/termdo_tasks_api/: main.py
source/termdo_tasks_api/app/configs/: app_config.py  db_config.py
source/termdo_tasks_api/app/constants/: db_constants.py  header_constants.py
source/termdo_tasks_api/app/middlewares/: header_middleware.py
source/termdo_tasks_api/app/schemas/: app_response.py  base_response.py
source/termdo_tasks_api/app/utils/: string_utils.py
source/termdo_tasks_api/common/queries/: task_queries.py
source/termdo_tasks_api/core/tasks/: tasks_builder.py  tasks_manager.py  tasks_provider.py
source/termdo_tasks_api/core/tasks/schemas/: tasks_request.py  tasks_response.py
source/termdo_tasks_api/modules/db/: module.py
source/termdo_tasks_api/modules/db/core/: db_handler.py
