[project]
name = "termdo-tasks-api"
version = "1.0.0"
description = "Manages task operations including create update delete and retrieval for user todos"
authors = [{ name = "Emrecan Karaçayır", email = "developer@karacayir.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg (>=0.30.0,<0.31.0)",
  "fastapi[standard] (>=0.116.1,<0.117.0)",
]

[project.urls]
Repository = "https://github.com/termdo-inc/termdo-tasks-api"
Issues = "https://github.com/termdo-inc/termdo-tasks-api/issues"

[tool.poetry]
requires-poetry = ">=2.0.0,<3.0.0"
packages = [{ include = "source/", from = "source/" }]

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.30.2"
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
testpaths = "tests/"
pythonpath = "source/"
addopts = ["--cov=source/", "--cov-report=term-missing"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
